# onefig

./: .gitignore  Cargo.toml  README.md  dave.json  example-conf.nix  example.cnf  example.cof  example.nf  example.of  example2.nf  stewart.toml
src/: cli.rs  compile.rs  conff.rs  errors.rs  lexer.rs  lib.rs  main.rs  nodes.rs  search.rs  target_lang.rs  visitor.rs
src/nodes/: atom.rs  expr.rs  ident.rs  list.rs  literal.rs  path.rs  program.rs  source_file.rs  stmt.rs  table.rs
src/target_lang/: json.rs  nix.rs  toml.rs
