[package]
name = "onefig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.14.2", features = ["serde"] }
flexar = "1.2.0"
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
bincode = "1.3.3"

[profile.dev.package."*"]
opt-level = 3