[package]
name = "onefig"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.14.2", features = ["serde"] }
flexar = "1.2.1"
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
bincode = "1.3.3"
ahash = "0.8.6"
home = "0.5.5"
lz4_flex = "0.11.1"

[profile.dev.package."*"]
opt-level = 3